tests/ui/parser/keyword-enum-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py enum'

fn main() {
    let enum = "foo"; //~ error: expected identifier, found keyword `enum`
}
